# licheszter

./: .gitignore  API_DESIGN.md  API_REVIEW_SUMMARY.md  Cargo.toml  DOCUMENTATION_REVIEW.md  ERRORS_DOCUMENTATION_REPORT.md  FUNDAMENTAL_FLAWS_ANSWERED.md  FUNDAMENTAL_ISSUES.md  LICENSE-APACHE  LICENSE-MIT  MAINTAINER_FEEDBACK_RESPONSE.md  README.md  TEST_FIXES_SUMMARY.md  build.rs  flake.nix  rustfmt.toml
.github/docker/: entrypoint.sh
.github/workflows/: test.yml
src/: client.rs  error.rs  lib.rs
src/api/: account.rs  analysis.rs  board.rs  bot.rs  challenge.rs  challenges.rs  engine.rs  explorer.rs  fide.rs  games.rs  messaging.rs  misc.rs  mod.rs  opening.rs  openings.rs  pairings.rs  puzzles.rs  relations.rs  simuls.rs  tablebase.rs  tv.rs  users.rs
src/config/: board.rs  challenges.rs  engine.rs  explorer.rs  games.rs  mod.rs  openings.rs  pairings.rs  puzzles.rs  tv.rs  users.rs
src/models/: analysis.rs  board.rs  challenge.rs  chat.rs  common.rs  engine.rs  explorer.rs  fide.rs  game.rs  mod.rs  opening.rs  openings.rs  pairings.rs  puzzle.rs  simul.rs  tablebase.rs  tv.rs  user.rs
src/models/user/: core.rs  mod.rs  perf.rs  top.rs  variants.rs
tests/: account.rs  analysis.rs  board.rs  bot.rs  challenge.rs  challenges.rs  engine.rs  explorer.rs  fide.rs  games.rs  messaging.rs  misc.rs  openings.rs  pairings.rs  puzzles.rs  relations.rs  simuls.rs  tablebase.rs  tv.rs  users.rs
tests/responses/: account_playing.json  bot_game_stream.json  bots_online.json  challenge_ai.json  challenge_create.json  challenges.json  explorer_lichess.json  explorer_masters.json  explorer_player.json  stream_event.json  tablebase_antichess.json  tablebase_atomic.json  tablebase_standard.json
