[package]
name = "licheszter"
version = "0.4.0"
authors = ["tontsa28 <miika@tontsa.fi>"]
license = "MIT OR Apache-2.0"
description = "An API wrapper for the Lichess API"
homepage = "https://github.com/tontsa28/licheszter"
repository = "https://github.com/tontsa28/licheszter"
documentation = "https://docs.rs/licheszter"
keywords = ["lichess", "bot", "api", "wrapper", "chess"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"
edition = "2024"

[lib]
name = "licheszter"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["bytes"] }
tokio-util = "0.7.17"
reqwest = { version = "0.12.24", default-features = false, features = ["stream", "rustls-tls"] }
time = { version = "0.3.44", features = ["parsing", "serde"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.16.0", features = ["time_0_3"] }
futures-util = { version = "0.3.31", default-features = false }
comma_serde_urlencoded = "0.8.1"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros"] }

[features]
default = ["bot"]

# Return an error when an unknown field is encountered while deserializing.
# This is not recommended for production environments as it might cause unexpected problems.
serde-strict = []

openings = []
tablebase = []

# Only bot is enabled by default to prevent accidental cheating with the Board API.
# Any kind of chess assistance is only allowed using the Bot API.
# This project and its developers are not responsible for any possible consequences that may occur from misusing the Board API.
bot = []
board = []

# Enable all features at once.
all = ["bot", "board", "openings", "tablebase"]
