[package]
name = "licheszter"
version = "0.4.0"
authors = ["tontsa28 <miika@tontsa.fi>"]
license = "MIT OR Apache-2.0"
description = "An API wrapper for the Lichess API"
homepage = "https://github.com/tontsa28/licheszter"
repository = "https://github.com/tontsa28/licheszter"
documentation = "https://docs.rs/licheszter"
keywords = ["lichess", "bot", "api", "wrapper", "chess"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"
edition = "2021"
rust-version = "1.83"

[lib]
name = "licheszter"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "^1.30"
tokio-util = { version = "^0.7", optional = true }
reqwest = { version = "^0.13", default-features = false, features = ["http2", "stream", "rustls", "query", "form"] }
time = { version = "^0.3", features = ["serde", "macros"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = { version = "^3.0", features = ["time_0_3"] }
futures-util = { version = "^0.3", default-features = false, optional = true }
comma_serde_urlencoded = { version = "^0.8", optional = true }

[dev-dependencies]
tokio = { version = "^1.30", features = ["macros"] }

[features]
default = ["bot"]

# Return an error when an unknown field is encountered while deserializing.
# This is not recommended for production environments as it might cause unexpected problems.
serde-strict = []

# Internal features for dependency management
streaming = ["dep:tokio-util", "dep:futures-util"]
url-encoding = ["dep:comma_serde_urlencoded"]

# API category features
account = []
users = ["url-encoding"]
relations = ["streaming"]
games = ["streaming", "url-encoding"]
tv = ["streaming", "url-encoding"]
puzzles = ["streaming"]
challenges = ["streaming", "url-encoding"]
pairings = ["streaming", "url-encoding"]
messaging = []
simuls = []
fide = ["url-encoding"]
analysis = []
openings = ["streaming", "url-encoding"]
tablebase = []

# Only bot is enabled by default to prevent accidental cheating with the Board API.
# Any kind of chess assistance is only allowed using the Bot API.
# This project and its developers are not responsible for any possible consequences that may occur from misusing the Board API.
bot = ["streaming"]
board = ["streaming", "url-encoding"]

# Convenience feature to enable all API categories at once.
all = ["account", "users", "relations", "games", "tv", "puzzles", "challenges", "pairings", "messaging", "simuls", "fide", "analysis", "bot", "board", "openings", "tablebase"]
